Make tel input narrower to prevent line break in error state

--- a/packages/web-components/src/components/va-telephone-input/va-telephone-input.scss
+++ b/packages/web-components/src/components/va-telephone-input/va-telephone-input.scss
@@ -55,7 +55,7 @@ va-combo-box {
 }
 
 va-text-input {
-  width: 20ch;
+  width: 18ch;
 }
 
 .va-input-telephone-wrapper {
